--- a/examples/simple_test/index.html
+++ b/examples/simple_test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>jQuery Mobile & Backbone.js Example</title>
-	<<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />>styl
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script src="js/underscore-min.js">
