--- a/index.html
+++ b/index.html
@@ -31,18 +31,57 @@
 		</form>
 	</script>
 	<script type="text/template" id="tour-keypad-tpl">
+		<div id="keypad">
+			<div class="ui-grid-b">
+				<div class="ui-block-a" style="width:66.4%;border:1px solid #666;background-color: #FFF;border-radius:.3em;-moz-border-radius:.3em;-webkit-border-radius:.3em;margin-top:.3em;"><div class="ui-bar" id="write"></div></div>
+				<div class="ui-block-b" id="gobtn"><div class="ui-bar ui-bar-d">Go</div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>1</keybtn></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>2</keybtn></div></div>
+				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>3</keybtn></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>5</keybtn></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>5</keybtn></div></div>
+				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>6</keybtn></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>7</keybtn></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>8</keybtn></div></div>
+				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>9</keybtn></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>0</keybtn></div></div>
+				<div class="ui-block-b" style="width:66.55%;"><div class="ui-bar ui-bar-d"><keybtn class="delete">Clear</keybtn></div></div>
+			</div>
+		</div>
 	</script>
 	<script type="text/template" id="tour-stop-tpl">
-		<form action="demo_form.asp">
 			<div>
-				<label>Publish Date: </label>
-				<%= publishDate %>
+				<label>Tour Stop Title: </label>
+				<%= tourStopTitle %><br />
+				<label>Tour Stop Description: </label>
+				<%= tourStopDescription %><br />
+				<label>Tour Stop Code: </label>
+				<%= tourStopCode %><br />
 			</div>
+	</script>
+	<script type="text/template" id="tour-stop-image-tpl">
 			<div>
-				<label>Tour Stop ID: </label>
-				<%= tourStopId %>
+				<label>Tour Stop Title: </label>
+				<%= tourStopTitle %><br />
+				<label>Tour Stop Code: </label>
+				<%= tourStopCode %><br />
 			</div>
-		</form>
+	</script>
+	<script type="text/template" id="tour-stop-video-tpl">
+			<div>
+				<label>Tour Stop Title: </label>
+				<%= tourStopTitle %><br />
+				<label>Tour Stop Code: </label>
+				<%= tourStopCode %><br />
+			</div>
+	</script>
+	<script type="text/template" id="tour-stop-audio-tpl">
+			<div>
+				<label>Tour Stop Title: </label>
+				<%= tourStopTitle %><br />
+				<label>Tour Stop Code: </label>
+				<%= tourStopCode %><br />
+			</div>
 	</script>
 	<!-- /templates -->
 
@@ -91,23 +130,6 @@
 		</div> 	
 		<div data-role="content">
 
-		</div>
-		<div id="keypad">
-			<div class="ui-grid-b">
-				<div class="ui-block-a" style="width:66.4%;border:1px solid #666;background-color: #FFF;border-radius:.3em;-moz-border-radius:.3em;-webkit-border-radius:.3em;margin-top:.3em;"><div class="ui-bar" id="write"></div></div>
-				<div class="ui-block-b"><div class="ui-bar ui-bar-d">Go</div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>1</keybtn></div></div>
-				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>2</keybtn></div></div>
-				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>3</keybtn></div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>4</keybtn></div></div>
-				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>5</keybtn></div></div>
-				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>6</keybtn></div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>7</keybtn></div></div>
-				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>8</keybtn></div></div>
-				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>9</keybtn></div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>0</keybtn></div></div>
-				<div class="ui-block-b" style="width:66.55%;"><div class="ui-bar ui-bar-d"><keybtn class="delete">Del</keybtn></div></div>
-			</div>
 		</div>
 	</div>
 	<!-- tour stop page -->
