--- a/index.html
+++ b/index.html
@@ -11,34 +11,19 @@
 		<a href="#tour/<%= id %>"><%= title %></a>
 	</script>
 	<script type="text/template" id="tour-details-tpl">
-		<form action="demo_form.asp">
 			<div>
-				<label>Publish Date: </label>
-				<%= publishDate %>
-			</div>
-			<div>
-				<label>Description: </label>
 				<%= description %>
 			</div>
-			<div>
-				<label>Stop Count: </label>
-				<%= stopCount %>
-			</div>
-			<div>
-				<label>Asset Count: </label>
-				<%= assetCount %>
-			</div>
-		</form>
 	</script>
 	<script type="text/template" id="tour-keypad-tpl">
 		<div id="keypad">
 			<div class="ui-grid-b">
-				<div class="ui-block-a" style="width:66.4%;border:1px solid #666;background-color: #FFF;border-radius:.3em;-moz-border-radius:.3em;-webkit-border-radius:.3em;margin-top:.3em;"><div class="ui-bar" id="write"></div></div>
+				<div class="ui-block-a" style="width:66.4%;border:1px solid #666;background-color: #FFF;border-radius:.3em;-moz-border-radius:.3em;-webkit-border-radius:.3em;margin-top:.3em;height:60px;"><div class="ui-bar" id="write"></div></div>
 				<div class="ui-block-b" id="gobtn"><div class="ui-bar ui-bar-d">Go</div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>1</keybtn></div></div>
-				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>2</keybtn></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d" data-role="button"><keybtn>1</keybtn></div></div>
+				<a class="ui-block-b" data-role="button"><div class="ui-bar ui-bar-d"><keybtn>2</keybtn></div></a>
 				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>3</keybtn></div></div>
-				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>5</keybtn></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>4</keybtn></div></div>
 				<div class="ui-block-b"><div class="ui-bar ui-bar-d"><keybtn>5</keybtn></div></div>
 				<div class="ui-block-c"><div class="ui-bar ui-bar-d"><keybtn>6</keybtn></div></div>
 				<div class="ui-block-a"><div class="ui-bar ui-bar-d"><keybtn>7</keybtn></div></div>
@@ -50,51 +35,63 @@
 		</div>
 	</script>
 	<script type="text/template" id="tour-stop-tpl">
-			<div>
-				<label>Tour Stop Title: </label>
-				<%= tourStopTitle %><br />
-				<label>Tour Stop Description: </label>
-				<%= tourStopDescription %><br />
-				<label>Tour Stop Code: </label>
-				<%= tourStopCode %><br />
+			<div style="width:100%;">
+				<stoptitle><%= tourStopTitle %></stoptitle><br />
+				<stopdescription><%= tourStopDescription %></stopdescription><br />
 			</div>
 	</script>
 	<script type="text/template" id="tour-stop-image-tpl">
 			<div>
-				<label>Tour Stop Title: </label>
-				<%= tourStopTitle %><br />
-				<label>Tour Stop Code: </label>
-				<%= tourStopCode %><br />
+				<img src="<%= tourImageUri %>" class="primaryImg"><br />
+				<stoptitle><%= tourStopTitle %></stoptitle><br />
 			</div>
 	</script>
 	<script type="text/template" id="tour-stop-video-tpl">
 			<div>
-				<label>Tour Stop Title: </label>
-				<%= tourStopTitle %><br />
-				<label>Tour Stop Code: </label>
-				<%= tourStopCode %><br />
+				<video width="95%" controls="controls" autoplay="autoplay" id="videoPlayer" poster="assets/images/tapPoster.png">
+					<source src="<%= tourStopOggVideo %>" type="video/ogg" />
+					<source src="<%= tourStopMp4Video %>" type="video/mp4" />
+					Your browser does not support the video tag.
+				</video>
 			</div>
 	</script>
 	<script type="text/template" id="tour-stop-audio-tpl">
 			<div>
-				<label>Tour Stop Title: </label>
+				<audio autoplay controls="controls" id="audioPlayer">
+					<source src="<%= tourStopOggAudio %>" type="audio/ogg" />
+					<source src="<%= tourStopMp3Audio %>" type="audio/mp3" />
+					<source src="<%= tourStopWavAudio %>" type="audio/wav" />
+					Your browser does not support the audio element.
+				</audio>
 				<%= tourStopTitle %><br />
-				<label>Tour Stop Code: </label>
-				<%= tourStopCode %><br />
+			</div>
+	</script>
+	<script type="text/template" id="tour-stop-web-tpl">
+			<div style="width:100%;">
+				<stoptitle><%= tourStopTitle %></stoptitle><br />
+			</div>
+	</script>
+	<script type="text/template" id="tour-stop-object-tpl">
+			<div style="width:100%;">
+				<stoptitle><%= tourStopTitle %></stoptitle><br />
+			</div>
+	</script>
+	<script type="text/template" id="tour-stop-geo-tpl">
+			<div style="width:100%;">
+				<stoptitle><%= tourStopTitle %></stoptitle><br />
 			</div>
 	</script>
 	<!-- /templates -->
 
 	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script src="js/underscore-min.js">
+	<script src="js/underscore-min-1.3.1.js">
 	<script src="js/json2.js"></script>
-	<script src="js/backbone-min.js"></script>
+	<script src="js/backbone-min-0.9.1.js"></script>
 	<script src="js/backbone.localStorage-min.js"></script>
 	<script src="js/tap.helper.js"></script>
 	<script src="js/tap.models.js"></script>
 	<script src="js/tap.init.js"></script>
-	<script src="js/keypad.js"></script>
 	<script src="js/tour.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 </head>
@@ -111,22 +108,23 @@
 	<!-- tour details page -->
 	<div data-role="page" id="tour-details">
 		<div data-role="header">
+			<a data-rel="back">Tours</a>
 			<h1 id="page-title"></h1>
-			<a data-rel="back" data-icon="back">Back</a>
 		</div> 	
+		<div class="">
+			<br /><br />
+			<a href="#tourkeypad/" id="start-tour-id" data-role="button" data-theme="a">Start Tour</a>
+		</div>
 		<div data-role="content">
 
-		</div>
-		<div class="">
-			<a href="#tourkeypad/" id="start-tour-id" data-role="button" data-theme="a">Start Tour</a>
 		</div>
 	</div>
 	<!-- tour keypad page -->
 	<div data-role="page" id="tour-keypad">
 		<div data-role="header">
-			<h1 id="page-title">Keypad</h1>
-			<a data-rel="back" data-icon="back">Back</a>
-			<a data-rel="back" data-theme="b">Help</a>
+			<a data-rel="back">Tour Info</a>
+			<h1 id="page-title">Enter a Code</h1>
+			<a data-theme="b" href="assets/video/tap_IMA_help_vid.mp4">Help</a>
 		</div> 	
 		<div data-role="content">
 
@@ -136,7 +134,7 @@
 	<div data-role="page" id="tour-stop">
 		<div data-role="header">
 			<h1 id="page-title"></h1>
-			<a data-rel="back" data-icon="back">Back</a>
+			<a data-rel="back">Keypad</a>
 		</div> 	
 		<div data-role="content">
 
