Add meta tags for app bookmarking

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>jQuery Mobile & Backbone.js Example</title>
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
+	<title>TAP Web</title>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<link rel="stylesheet" href="css/tapweb.css" />
 	<link rel="stylesheet" href="css/photoswipe.css" />
