--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- test comment -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -97,16 +96,34 @@
 
 	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script src="js/underscore-min-1.3.1.js">
-	<script src="js/json2.js"></script>
-	<script src="js/backbone-min-0.9.1.js"></script>
-	<script src="js/backbone.localStorage-min.js"></script>
-	<script src="js/klass.min.js"></script>
-	<script src="js/photoswipe/code.photoswipe.jquery-3.0.4.js"></script>
-	<script src="js/tap.helper.js"></script>
-	<script src="js/tap.models.js"></script>
-	<script src="js/tap.init.js"></script>
-	<script src="js/tour.js"></script>
+	<script src="js/external/underscore-min-1.3.1.js">
+	<script src="js/external/json2.js"></script>
+	<script src="js/external/backbone-min-0.9.1.js"></script>
+	<script src="js/external/backbone.localStorage-min.js"></script>
+	<script src="js/external/klass.min.js"></script>
+	<script src="js/external/code.photoswipe.jquery-3.0.4.js"></script>
+	<script src="js/backbone/helper.js"></script>
+	<script src="js/backbone/models/TourModel.js"></script>
+	<script src="js/backbone/models/StopModel.js"></script>
+	<script src="js/backbone/models/AssetModel.js"></script>
+	<script src="js/backbone/collections/TourCollection.js"></script>
+	<script src="js/backbone/collections/StopCollection.js"></script>
+	<script src="js/backbone/collections/AssetCollection.js"></script>
+	<script src="js/backbone/views/HelperView.js"></script>
+	<script src="js/backbone/views/TourListView.js"></script>
+	<script src="js/backbone/views/TourDetailsView.js"></script>
+	<script src="js/backbone/views/KeypadView.js"></script>
+	<script src="js/backbone/views/DefaultStopView.js"></script>
+	<script src="js/backbone/views/ImageStopView.js"></script>
+	<script src="js/backbone/views/VideoStopView.js"></script>
+	<script src="js/backbone/views/GalleryView.js"></script>
+	<script src="js/backbone/views/AudioStopView.js"></script>
+	<script src="js/backbone/views/WebStopView.js"></script>
+	<script src="js/backbone/views/ObjectStopView.js"></script>
+	<script src="js/backbone/views/GeoStopView.js"></script>
+	<script src="js/backbone/Router.js"></script>
+	<script src="js/backbone/Init.js"></script>
+	<script src="js/backbone/Tap.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 </head>
 <body>
