Migrated Image and Default stop views to TapAPI namespace

--- a/devel.html
+++ b/devel.html
@@ -33,12 +33,12 @@
 	<script src="js/backbone/views/DefaultStopView.js"></script>
 	<script src="js/backbone/views/ImageStopView.js"></script>
 	<script src="js/backbone/views/VideoStopView.js"></script>
-	<script src="js/backbone/views/GalleryView.js"></script>
+	<!--<script src="js/backbone/views/GalleryView.js"></script>-->
 	<script src="js/backbone/views/AudioStopView.js"></script>
-	<script src="js/backbone/views/WebStopView.js"></script>
-	<script src="js/backbone/views/ObjectStopView.js"></script>
+	<!--<script src="js/backbone/views/WebStopView.js"></script>-->
+	<!--<script src="js/backbone/views/ObjectStopView.js"></script>-->
 	<script src="js/backbone/views/StopGroupView.js"></script>
-	<script src="js/backbone/views/GeoStopView.js"></script>
+	<!--<script src="js/backbone/views/GeoStopView.js"></script>-->
 	<script src="js/backbone/Router.js"></script>
 	<script src="js/backbone/Init.js"></script>
 	<script type="text/javascript">
