--- a/devel.html
+++ b/devel.html
@@ -121,7 +121,8 @@
 			<a href="#" data-role="button" data-rel="back" data-theme="b">Close</a>       
 		</div>
 	</div>
-	<!-- deprecated templates, potentially to be moved into template files
+	<!-- templates -->
+	<!--
 	<script type="text/template" id="tour-gallery-tpl">
 	<ul id="Gallery">
 		<li><a href="assets/images/001.jpg"><img src="assets/images/icons/001.ico" alt="Image 01" /></a></li>
@@ -148,5 +149,6 @@
 			</div>
 	</script>
 	-->
+	<!-- /templates -->
 </body>
 </html>
