Started to add templates to grunt build

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 	<link rel="stylesheet" href="dist/Tap-0.1.0.css" />
 
+    <script src="dist/Tap-0.1.0-dependencies.min.js"></script>
+    <script src="dist/Tap-0.1.0.min.js"></script>
+
+    <!--
 	<script src="js/external/jquery-1.7.2.js"></script>
 	<script src="js/external/jquery.mobile-1.1.0.js"></script>
 	<script src="js/external/underscore-1.3.3.js"></script>
@@ -18,6 +22,7 @@
 	<script src="js/external/klass.js"></script>
 	<script src="js/external/code.photoswipe.jquery-3.0.4.js"></script>
 	<script src="dist/Tap-0.1.0.js"></script>
+	-->
 	
 	<script type="text/javascript">
 		(function($){
@@ -98,6 +103,7 @@
 		</div>
 	</div>
 	<!-- templates -->
+	<!--
 	<script type="text/template" id="tour-list-item-tpl">    
 		<a href="#tour/<%= id %>"><%= title %></a>
 	</script>
@@ -133,6 +139,7 @@
 				<div class="ui-block-b" id="clearStyle"><div class="ui-bar ui-bar-d" id="delete">Clear</div></div>
 		</div>
 	</script>
+	-->
 	<script type="text/template" id="tour-stop-tpl">
 			<div style="width:100%;">
 				<stoptitle><%= tourStopTitle %></stoptitle><br />
