--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 
 		</div>
 	</div>
+	<!-- tour map page -->
+	<div data-role="page" id="tour-map-page">
+		<div data-role="header">
+			<a data-rel="back">Tour Info</a>
+			<h1 id="page-title">Tour Map</h1>
+			<a data-theme="b">Help</a>
+		</div> 	
+		<div data-role="content">
+
+		</div>
+	</div>	
 	<!-- Error: invalid tour stop code -->
 	<div data-role="dialog" id="error_invalidCode">
 		<div data-role="header" data-theme="d">
