--- a/devel.html
+++ b/devel.html
@@ -7,21 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<title>TAP Web</title>
 
-	<link rel="stylesheet" href="css/jquery.mobile-1.1.0.css" />
-	<link rel="stylesheet" href="css/tapweb.css" />
-	<link rel="stylesheet" href="css/photoswipe.css" />
+	<link rel="stylesheet" href="external/jqmobile/jquery.mobile-1.1.0.css" />	
 	<link rel="stylesheet" href="external/leaflet/leaflet.css" />
+	<link rel="stylesheet" href="external/photoswipe/photoswipe.css" />
+	<link rel="stylesheet" href="css/tapweb.css" />	
 
 	<script src="js/external/jquery-1.7.2.js"></script>
-	<script src="js/external/jquery.mobile-1.1.0.js"></script>
 	<script src="js/external/underscore-1.3.3.js"></script>
 	<script src="js/external/json2.js"></script>
 	<script src="js/external/backbone-0.9.2.js"></script>
 	<script src="js/external/backbone.localStorage-min.js"></script>
 	<script src="js/external/klass.js"></script>
-	<script src="js/external/code.photoswipe.jquery-3.0.4.js"></script>
+	<script src="external/jqmobile/jquery.mobile-1.1.0.js"></script>	
 	<script src="external/leaflet/leaflet.js"></script>
-
+	<script src="external/photoswipe/code.photoswipe.jquery-3.0.4.js"></script>
+	
 	<script src="js/backbone/helper.js"></script>
 	<script src="js/backbone/Init.js"></script>	
 	<script src="js/backbone/Router.js"></script>	
@@ -119,7 +119,7 @@
 	<div data-role="page" id="tour-stop">
 		<div data-role="header">
 			<h1 id="page-title"></h1>
-			<a data-rel="back">Keypad</a>
+			<a data-rel="back" data-icon="arrow-l">Back</a>
 		</div> 	
 		<div data-role="content">
 
