--- a/devel.html
+++ b/devel.html
@@ -44,6 +44,7 @@
 	<script src="js/backbone/views/MapView.js"></script>		
 	<!--<script src="js/backbone/views/ObjectStopView.js"></script>-->	
 	<script src="js/backbone/views/StopGroupView.js"></script>	
+	<script src="js/backbone/views/StopListView.js"></script>	
 	<script src="js/backbone/views/TourDetailsView.js"></script>	
 	<script src="js/backbone/views/TourListView.js"></script>
 	<script src="js/backbone/views/VideoStopView.js"></script>
@@ -106,6 +107,17 @@
 
 		</div>
 	</div>	
+	<!-- tour stop list page -->
+	<div data-role="page" id="tour-stop-list-page">
+		<div data-role="header">
+			<a data-rel="back">Back</a>
+			<h1 id="page-title">Tour Stops</h1>
+			<a data-theme="b" href="assets/video/tap_IMA_help_vid.mp4">Help</a>
+		</div> 	
+		<div data-role="content">
+			<ul id="tour-stop-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
+		</div>
+	</div>
 	<!-- tour map page -->
 	<div data-role="page" id="tour-map-page">
 		<div data-role="header">
