--- a/devel.html
+++ b/devel.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="css/tapweb.css" />	
 
 	<script src="js/external/jquery-1.7.2.js"></script>
+	<script src="js/backbone/jqm-config.js"></script> <!-- must be included before jqMobile -->
+
 	<script src="js/external/underscore-1.3.3.js"></script>
 	<script src="js/external/json2.js"></script>
 	<script src="js/external/backbone-0.9.2.js"></script>
@@ -36,6 +38,7 @@
 	<script src="js/backbone/collections/StopCollection.js"></script>	
 	<script src="js/backbone/collections/TourCollection.js"></script>
 
+	<script src="js/backbone/views/PageView.js"></script> <!-- must be defined before other pages -->
 	<script src="js/backbone/views/AudioStopView.js"></script>
 	<script src="js/backbone/views/DefaultStopView.js"></script>	
 	<script src="js/backbone/views/KeypadView.js"></script>	
@@ -53,130 +56,19 @@
 	<script type="text/javascript">
 		(function($){
 
-			// initialize jqm properties to allow backbone to handle routing
-			$.mobile.hashListeningEnabled = false;
-			$.mobile.linkBindingEnabled = false;
-			$.mobile.pushStateEnabled = false;
-
 			$(document).ready(function() {
+				
 				// initialize app
 				tap.initApp('data/TourMLTourSetInternal.xml');
 
 				// start backbone history collection
 				Backbone.history.start();
-				// override click event for back button
-				$('body').find(":jqmData(rel='back')").click(function(e) {
-					e.preventDefault();
-					window.history.back();
-				});
+
 			});
 		}(jQuery));
 	</script>
 </head>
 <body>
-	<!-- tour listing page -->
-	<div data-role="page" id="tours">
-		<div data-role="header">
-			<h1 id="page-title">Tours</h1>
-		</div> 	
-		<div data-role="content">
-			<ul id="tour-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
-		</div>
-	</div>
-	<!-- tour details page -->
-	<div data-role="page" id="tour-details">
-		<div data-role="header">
-			<a data-rel="back">Tours</a>
-			<h1 id="page-title"></h1>
-		</div> 	
-		<div class="">			
-			<a href="#tourkeypad/" id="start-tour-id" data-role="button" data-theme="b">Start Tour</a>
-		</div>
-		<div data-role="content">
-
-		</div>
-	</div>
-	<!-- tour keypad page -->
-	<div data-role="page" id="tour-keypad">
-		<div data-role="header">
-			<a data-rel="back">Tour Info</a>
-			<h1 id="page-title">Enter a Code</h1>
-			<a data-theme="b" href="assets/video/tap_IMA_help_vid.mp4">Help</a>
-		</div> 	
-		<div data-role="content">
-
-		</div>
-	</div>	
-	<!-- tour stop list page -->
-	<div data-role="page" id="tour-stop-list-page">
-		<div data-role="header">
-			<a data-rel="back">Back</a>
-			<h1 id="page-title">Tour Stops</h1>
-			<a data-theme="b" href="assets/video/tap_IMA_help_vid.mp4">Help</a>
-		</div> 	
-		<div data-role="content">
-			<ul id="tour-stop-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
-		</div>
-	</div>
-	<!-- tour map page -->
-	<div data-role="page" id="tour-map-page">
-		<div data-role="header">
-			<a data-rel="back">Tour Info</a>
-			<h1 id="page-title">Tour Map</h1>
-			<a data-theme="b">Help</a>
-		</div> 	
-		<div data-role="content">
-
-		</div>
-	</div>		
-	<!-- tour stop page -->
-	<div data-role="page" id="tour-stop">
-		<div data-role="header">
-			<h1 id="page-title"></h1>
-			<a data-rel="back" data-icon="arrow-l">Back</a>
-		</div> 	
-		<div data-role="content">
-
-		</div>
-	</div>
-	<!-- Error: invalid tour stop code -->
-	<div data-role="dialog" id="error_invalidCode">
-		<div data-role="header" data-theme="d">
-			<h1></h1>
-		</div>
-		<div data-role="content" data-theme="c" align="center">
-			<p>This is an invalid code.  Please enter another.</p>
-			<a href="#" data-role="button" data-rel="back" data-theme="b">Close</a>       
-		</div>
-	</div>
-	<!-- templates -->
-	<!--
-	<script type="text/template" id="tour-gallery-tpl">
-	<ul id="Gallery">
-		<li><a href="assets/images/001.jpg"><img src="assets/images/icons/001.ico" alt="Image 01" /></a></li>
-		<li><a href="assets/images/002.jpg"><img src="assets/images/icons/002.ico" alt="Image 02" /></a></li>
-		<li><a href="assets/images/003.jpg"><img src="assets/images/icons/003.ico" alt="Image 03" /></a></li>
-		<li><a href="assets/images/004.jpg"><img src="assets/images/icons/004.ico" alt="Image 04" /></a></li>
-		<li><a href="assets/images/005.jpg"><img src="assets/images/icons/005.ico" alt="Image 05" /></a></li>
-		<li><a href="assets/images/006.jpg"><img src="assets/images/icons/006.ico" alt="Image 06" /></a></li>
-	</ul>
-	</script>
-	<script type="text/template" id="tour-stop-web-tpl" class='tour-stop'>
-			<div style="width:100%;">
-				<div class='title'><%= tourStopTitle %></div>
-			</div>
-	</script>
-	<script type="text/template" id="tour-stop-object-tpl" class='tour-stop'>
-			<div style="width:100%;">
-				<div class='title'><%= tourStopTitle %></div>
-			</div>
-	</script>
-	<script type="text/template" id="tour-stop-geo-tpl" class='tour-stop'>
-			<div style="width:100%;">
-				<div class='title'><%= tourStopTitle %></div>
-			</div>
-	</script>
-	-->
-	<!-- /templates -->
+	<!-- Content is injected here by backbone -->
 </body>
 </html>
