Determining complete path to image app resources

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="dist/Tap-0.1.0.css" />
 
     <script src="dist/Tap-0.1.0-dependencies.min.js"></script>
-    <script src="dist/Tap-0.1.0.min.js"></script>
+    <script src="dist/Tap-0.1.0.js"></script>
 	
 	<script type="text/javascript">
 		(function($){
