refactoring properties, sources, and content into distinct models/collections

--- a/devel.html
+++ b/devel.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="external/jqmobile/jquery.mobile-1.1.0.css" />	
 	<link rel="stylesheet" href="external/leaflet/leaflet.css" />
 	<link rel="stylesheet" href="external/photoswipe/photoswipe.css" />
+	<link rel="stylesheet" href="external/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/tapweb.css" />	
 
 	<script src="js/external/jquery-1.7.2.js"></script>
@@ -23,6 +24,7 @@
 	<script src="external/jqmobile/jquery.mobile-1.1.0.js"></script>	
 	<script src="external/leaflet/leaflet.js"></script>
 	<script src="external/photoswipe/code.photoswipe.jquery-3.0.4.js"></script>
+	<script src="external/mediaelement/mediaelement-and-player.js"></script>
 	
 	<script src="js/backbone/helper.js"></script>
 	<script src="js/backbone/Init.js"></script>	
@@ -30,10 +32,16 @@
 	<script src="js/backbone/Router.js"></script>	
 	<script src="js/backbone/TemplateManager.js"></script>
 
+	<script src="js/backbone/models/PropertyModel.js"></script>
+	<script src="js/backbone/models/SourceModel.js"></script>
+	<script src="js/backbone/models/ContentModel.js"></script>
 	<script src="js/backbone/models/AssetModel.js"></script>
 	<script src="js/backbone/models/StopModel.js"></script>		
 	<script src="js/backbone/models/TourModel.js"></script>	
 
+	<script src="js/backbone/collections/PropertySetCollection.js"></script>
+	<script src="js/backbone/collections/SourceCollection.js"></script>
+	<script src="js/backbone/collections/ContentCollection.js"></script>
 	<script src="js/backbone/collections/AssetCollection.js"></script>	
 	<script src="js/backbone/collections/StopCollection.js"></script>	
 	<script src="js/backbone/collections/TourCollection.js"></script>
@@ -44,13 +52,11 @@
 	<script src="js/backbone/views/KeypadView.js"></script>	
 	<script src="js/backbone/views/ImageStopView.js"></script>	
 	<script src="js/backbone/views/MapView.js"></script>		
-	<!--<script src="js/backbone/views/ObjectStopView.js"></script>-->	
 	<script src="js/backbone/views/StopGroupView.js"></script>	
 	<script src="js/backbone/views/StopListView.js"></script>	
 	<script src="js/backbone/views/TourDetailsView.js"></script>	
 	<script src="js/backbone/views/TourListView.js"></script>
 	<script src="js/backbone/views/VideoStopView.js"></script>
-	<!--<script src="js/backbone/views/WebStopView.js"></script>-->
 
 	<script type="text/javascript">
 		(function($){
