--- a/devel.html
+++ b/devel.html
@@ -69,6 +69,18 @@
 				// start backbone history collection
 				Backbone.history.start();
 
+				var photoSwipe = $('#Gallery a').photoSwipe({
+					enableMouseWheel: false,
+					enableKeyboard: true,
+					doubleTapZoomLevel : 0,
+					captionAndToolbarOpacity : 0.8,
+					minUserZoom : 0.0,
+					preventSlideshow : true,
+					jQueryMobile : true
+				});
+
+
+
 			});
 		}(jQuery));
 	</script>
