Added tracking for media play duration

--- a/devel.html
+++ b/devel.html
@@ -25,7 +25,8 @@
 	<script src="external/leaflet/leaflet.js"></script>
 	<script src="external/photoswipe/code.photoswipe.jquery-3.0.4.js"></script>
 	<script src="external/mediaelement/mediaelement-and-player.js"></script>
-	
+
+	<script src="js/AnalyticsTimer.js"></script>	
 	<script src="js/backbone/helper.js"></script>
 	<script src="js/backbone/Init.js"></script>	
 	<script src="js/backbone/GeoLocation.js"></script>
