--- a/devel.html
+++ b/devel.html
@@ -7,21 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<title>TAP Web</title>
 
-	<link rel="stylesheet" href="external/jqmobile/jquery.mobile-1.1.0.css" />	
+	<link rel="stylesheet" href="external/jqmobile/jquery.mobile-1.1.1.css" />	
 	<link rel="stylesheet" href="external/leaflet/leaflet.css" />
 	<link rel="stylesheet" href="external/photoswipe/photoswipe.css" />
 	<link rel="stylesheet" href="external/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/tapweb.css" />	
 
-	<script src="js/external/jquery-1.7.2.js"></script>
+	<script src="external/jquery-1.7.2.js"></script>
 	<script src="js/backbone/jqm-config.js"></script> <!-- must be included before jqMobile -->
 
-	<script src="js/external/underscore-1.3.3.js"></script>
-	<script src="js/external/json2.js"></script>
-	<script src="js/external/backbone-0.9.2.js"></script>
-	<script src="js/external/backbone.localStorage-min.js"></script>
-	<script src="js/external/klass.js"></script>
-	<script src="external/jqmobile/jquery.mobile-1.1.0.js"></script>	
+	<script src="external/underscore-1.3.3.js"></script>
+	<script src="external/json2.js"></script>
+	<script src="external/backbone-0.9.2.js"></script>
+	<script src="external/backbone.localStorage-min.js"></script>
+	<script src="external/klass.js"></script>
+	<script src="external/jqmobile/jquery.mobile-1.1.1.js"></script>	
 	<script src="external/leaflet/leaflet.js"></script>
 	<script src="external/photoswipe/code.photoswipe.jquery-3.0.4.js"></script>
 	<script src="external/mediaelement/mediaelement-and-player.js"></script>
