--- a/devel.html
+++ b/devel.html
@@ -16,9 +16,10 @@
 	<script src="external/jquery-1.7.2.js"></script>
 	<script src="js/backbone/jqm-config.js"></script> <!-- must be included before jqMobile -->
 
-	<script src="external/underscore-1.3.3.js"></script>
+	<script src="external/underscore-1.4.3.js"></script>
 	<script src="external/json2.js"></script>
-	<script src="external/backbone-0.9.2.js"></script>
+	<script src="external/backbone-0.9.9.js"></script>
+	<script src="external/backbone-super.js"></script>
 	<script src="external/backbone.localStorage-min.js"></script>
 	<script src="external/klass.js"></script>
 	<script src="external/jqmobile/jquery.mobile-1.1.1.js"></script>	
