Added view dependencies. Updated body attribute for jqmobile.

--- a/devel.html
+++ b/devel.html
@@ -15,7 +15,7 @@
 
 	<script data-main="js/main" src="js/vendor/require.js"></script>
 </head>
-<body>
+<body data-role="page">
 	<!-- Content is injected here by backbone -->
 </body>
 </html>
