--- a/devel.html
+++ b/devel.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="js/vendor/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
-	<script data-main="js/main" src="js/vendor/require.js"></script>
+	<script data-main="js/Main" src="js/vendor/require.js"></script>
 </head>
 <body>
 </body>
