--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="vendor/mediaelement/mediaelementplayer.css" />
     <link rel="stylesheet" href="dist/css/Tap-1.0.0.min.css" />
 
-    <script data-main="dist/js/tap/Main" src="vendor/require.js"></script>
+    <script data-main="dist/js/Main" src="vendor/require.js"></script>
 </head>
 <body>
 </body>
