add ability to set tourml in query parameter and clear local storage on load

--- a/devel.html
+++ b/devel.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" href="vendor/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
+	<script>
+		localStorage.clear();
+	</script>
+
 	<script data-main="js/Main" src="vendor/require.js"></script>
 </head>
 <body>
